# geolifeclef-2024

./: .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml  requirements.txt
docs/datasets/: EnvironmentRasters_Elevation.txt  EnvironmentalRasters_Climate_BioClimatic_Average.txt  EnvironmentalRasters_Climate_Climate_Monthly.txt  EnvironmentalRasters_HumanFootprint.txt  EnvironmentalRasters_LandCover.txt  EnvironmentalRasters_Soilgrids.txt  Presence_Absence_surveys.txt  Presence_only_occurrences.txt  SatelliteImages.txt  SatelliteTimeSeries.txt
geolifeclef/: functions.py  parquet.py  utils.py
geolifeclef/loaders/: GLC23Datasets.py  GLC23PatchesProviders.py  GLC23TimeSeriesProviders.py  README.md  get_jpeg_patches_mean_std.py
geolifeclef/torch/: losses.py  transforms.py
geolifeclef/workflows/: benchmark_classification.py  logistic.py  network.py  preprocess_tiles.py  sync_data.py  tiles_parquet.py  transformer.py  utils.py
notebook/: paraquet.ipynb
notebooks/modeling/: 2024-02-15-acm-occurences.ipynb  2024-02-25-acm-occurences.ipynb  2024-03-29-acm-dct.ipynb  2024-03-30-ea-timeseries.ipynb  2024-04-02-acm-metadata.ipynb  2024-04-02-acm-species-logistic-test.ipynb  2024-04-02-acm-species-lsh-summary.ipynb  2024-04-02-acm-species-lsh.ipynb  2024-04-06-acm-00-species-lsh-stats.ipynb  (+10 more)
script/: download_dataset.sh  preprocess.sh
tests/: conftest.py  test_torch_multilabel.py  test_torch_multilabel_data.py  test_torch_raster.py  test_torch_raster2vec.py  test_torch_raster2vec_clf.py
workflows/: geotiff_parquet.py  tiles_parquet.py
(+48 files in other folders)
