[project]
name = "geolifeclef"
version = "0.0.1"
authors = [{ name = "Anthony Miyaguchi", email = "acmiyaguchi@gatech.edu" }]
description = "DS@GT GeoLifeCLEF helper package"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/geolifeclef-2024"
Issues = "https://github.com/dsgt-kaggle-clef/geolifeclef-2024/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["geolifeclef"]
namespaces = false
